# cheugy

./: .gitignore  Dockerfile  LICENSE  Pipfile  main.py  pyproject.toml  requirements.txt
cheugy/: bot.py  stream_queue.py  youtube.py
