[tool.poetry]
name = "cheugy"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.0.0"
pytube = "^12.1.0"
PyNaCl = "^1.5.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
